# RuDataAnalyst-SQL

./: .gitignore  Makefile  README.md  main.py  patch_dataset.py  pyproject.toml
.github/workflows/: python-app.yml
configs/: base_model.yaml  baseline.yaml  qlora_real_smoke.yaml  qlora_smoke.yaml
data/: all.jsonl  blind_benchmark.jsonl  challenge.jsonl  test.jsonl  train.jsonl  validation.jsonl
data/databases/: logistics.sqlite  subscriptions.sqlite  warehouse.sqlite
docs/: BASELINE_PROTOCOL.md  DATASET_CARD_DRAFT.md  LOCAL_DEMO.md  PROJECT_SPEC.md  SCHEMA_REGISTRY.md
reports/: BLIND_BENCHMARK_CARD.md  DATASET_CARD.md  ENVIRONMENT_SETUP_REPORT.md  PHASE2_DATA_AND_EVAL_REPORT.md  PHASE3_BASELINE_AND_QLORA_SMOKE_REPORT.md  PHASE4_ERROR_ANALYSIS.md  PHASE4_FINAL_REPORT.md  PHASE4_FULL_QLORA_EVALUATION.md  PHASE5_BLIND_EVALUATION.md
reports/legacy/: QWEN2_5_3B_NONCOMMERCIAL_BASELINE.md
schemas/: example_record.schema.json
src/finetune_portfolio/: __init__.py  train_smoke.py
src/finetune_portfolio/data/: __init__.py  build_seed_dataset.py  leakage_check.py
src/finetune_portfolio/evaluation/: __init__.py  evaluate_predictions.py  sql_executor.py
src/finetune_portfolio/inference/: run_baseline.py
src/finetune_portfolio/modeling/: model_utils.py
src/finetune_portfolio/training/: run_qlora_smoke.py
src/rudataanalyst_sql/: __init__.py  check_environment.py
src/rudataanalyst_sql/data/: __init__.py  build_seed_dataset.py  (+5 more)
tests/: test_data.py  test_environment.py  test_evaluation.py  test_inference.py  test_phase4.py  test_registry.py  test_serve.py
(+16 files in other folders)
