[project]
name = "rudataanalyst-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "peft>=0.19.1",
    "protobuf>=7.35.1",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "trl>=1.8.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0"
]
